client and server connected